--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    // Base URL for module resolution
+    "baseUrl": ".",
+    // Path aliases
     "paths": {
       "@/*": ["./*"]
     }
